src/objects/Territories__x.object
<CustomObject>
    <description>Territories</description>
    <externalDataSource>Northwind</externalDataSource>
    <externalName>Territories</externalName>
    <fields>
        <fullName>RegionID__c</fullName>
        <description>RegionID</description>
        <externalDeveloperName>RegionID</externalDeveloperName>
        <label>RegionID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TerritoryDescription__c</fullName>
        <description>TerritoryDescription</description>
        <externalDeveloperName>TerritoryDescription</externalDeveloperName>
        <label>TerritoryDescription</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TerritoryID__c</fullName>
        <description>TerritoryID</description>
        <externalDeveloperName>TerritoryID</externalDeveloperName>
        <label>TerritoryID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Territories</label>
    <pluralLabel>Territories</pluralLabel>
</CustomObject>